Avoid use of deprecated numeric constructors
Probably in prep for value types...